--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .cursive {
-	font-family: 'Titillium';
+	font-family: 'Inter';
 	font-weight: 700;
 }
 
